# camgrid

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  test.ini  test.ini~
include/: settings.h
include/cam_grid/: .multi_cam1.hpp.swp  multi_cam.hpp  multi_cam2.hpp
src/: INIReader.cpp  grid_cam.cpp
